<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="c.hylandhack.kintober.MainActivity">
    <LinearLayout
        android:id="@+id/llMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#444444"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:text="@string/tv_login"
                android:textColor="#6dffbf"
                android:textSize="25sp" />

        <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_username"
                android:inputType="textUri|textShortMessage|textAutoCorrect|numberSigned|textVisiblePassword|textWebEditText|textMultiLine|textNoSuggestions|datetime|textCapSentences|textAutoComplete|textImeMultiLine|numberDecimal"
                android:textAlignment="center"
                android:textColor="#6bfff7"
                android:textColorHint="#52afaa" />

        <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#6bfff7"
                android:textColorHint="#52afaa" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="horizontal">

            <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_reset"
                    android:textAllCaps="false" />

            <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_submit"
                    android:textAllCaps="false" />
        </LinearLayout>

        <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register" />

        <Button
                android:id="@+id/test1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MainMenuTest" />

        <Button
                android:id="@+id/test2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MapActivityTest" />

        <Button
                android:id="@+id/test3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ARViewTest" />

        <Button
                android:id="@+id/test4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="AR Proof of Concept" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
