<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RandomActivity">

    <TextView
            android:id="@+id/tvGenerateRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/tv_random_route"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
            android:id="@+id/sbMiles"
            android:layout_width="274dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:max="50"
            android:progress="25"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/etMiles" />

    <EditText
            android:id="@+id/etMiles"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginTop="76dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="number"
            android:text="25"
            app:layout_constraintBottom_toTopOf="@+id/sbMiles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGenerateRoute" />

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="39dp"
            android:layout_height="31dp"
            android:layout_marginTop="224dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toEndOf="@+id/sbMiles"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_plus_round" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="39dp"
            android:layout_height="31dp"
            android:layout_marginTop="224dp"
            app:layout_constraintEnd_toStartOf="@+id/sbMiles"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_minus_round" />

    <Switch
            android:id="@+id/sRoundabout"
            android:layout_width="191dp"
            android:layout_height="21dp"
            android:layout_marginTop="148dp"
            android:layout_marginBottom="158dp"
            android:checked="false"
            android:text="@string/s_roundabout"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sbMiles" />

    <Button
            android:id="@+id/btnCancel"
            android:layout_width="337dp"
            android:layout_height="54dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_cancel"
            app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/btnConfirm"
            android:layout_width="342dp"
            android:layout_height="51dp"
            android:layout_marginBottom="32dp"
            android:text="@string/btn_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>